--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/email.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/email.html
@@ -119,6 +119,9 @@
                     <span class="spacer"></span>
                     <p>出貨狀態</p>
                     <p>{{ShippingStatus}}</p>
+                    <span class="spacer"></span>
+                    <p>出貨狀態</p>
+                    <p>{{ShippingStatus}}</p>
                 </td>
             </tr>
             <tr>
