--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/email.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/email.html
@@ -120,8 +120,8 @@
                     <p>出貨狀態</p>
                     <p>{{ShippingStatus}}</p>
                     <span class="spacer"></span>
-                    <p>出貨狀態</p>
-                    <p>{{ShippingStatus}}</p>
+                    <p>貨運號碼</p>
+                    <p>{{DeliveryNo}}</p>
                 </td>
             </tr>
             <tr>
