#PK-510 Update Order Status Template

--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/order_status.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/order_status.html
@@ -87,7 +87,7 @@ a[x-apple-data-detectors],
                   <td valign="top" align="center" class="es-m-p0r" style="padding:0;Margin:0;width:560px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;font-size:0px"><img src="{{logo_url}}" alt="Logo" width="200" title="Logo" style="display:block;font-size:12px;border:0;outline:none;text-decoration:none"></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;font-size:0px"><img src="{{LogoUrl}}" alt="Logo" width="200" title="Logo" style="display:block;font-size:12px;border:0;outline:none;text-decoration:none"></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -130,7 +130,7 @@ a[x-apple-data-detectors],
                   <td align="center" valign="top" style="padding:0;Margin:0;width:560px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" style="padding:0;Margin:0"><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">親愛的 {{customer_name}} 先生/小姐，</h5><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">您在 {{groupbuy_name}} 的</h5><h2 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px !important;color:#333333">訂單 <a target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px;line-height:52px !important" href="">#{{order_number}}</a> 狀態為 {{order_status}}</h2></td>
+                      <td align="center" style="padding:0;Margin:0"><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">親愛的 {{CustomerName}} 先生/小姐，</h5><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">您在 {{GroupBuyName}} 的</h5><h2 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px !important;color:#333333">訂單 <a target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px;line-height:52px !important" href="">#{{OrderNo}}</a> 狀態為 {{order_status}}</h2></td>
                      </tr>
                      <tr>
                       <td align="center" style="padding:0;Margin:0;padding-top:25px;padding-bottom:15px"><span class="es-button-border" style="border-style:solid;border-color:transparent;background:#23856d;border-width:2px;display:inline-block;border-radius:6px;width:auto"><a href="" target="_blank" class="es-button" style="mso-style-priority:100 !important;text-decoration:none !important;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;padding:10px 30px 10px 30px;display:inline-block;background:#23856d;border-radius:6px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center;letter-spacing:0;mso-padding-alt:0;mso-border-alt:10px solid #23856d;border-left-width:30px;border-right-width:30px">前往商店</a></span></td>
@@ -196,7 +196,7 @@ a[x-apple-data-detectors],
                  </tr>
                </table></td>
              </tr>
-             {{order_items}}
+             {{OrderItems}}
              <tr>
               <td align="left" style="padding:0;Margin:0;padding-right:20px;padding-left:20px;padding-top:10px">
                <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
