--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/order_items.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/order_items.html
@@ -8,7 +8,7 @@
          <td align="center" class="es-m-p0r" style="padding:0;Margin:0;width:53px">
           <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
             <tr>
-             <td align="center" style="padding:0;Margin:0;font-size:0px"><img src="{{image_url}}" alt="" width="53" class="adapt-img" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
+             <td align="center" style="padding:0;Margin:0;font-size:0px"><img src="{{ImageUrl}}" alt="" width="53" class="adapt-img" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
             </tr>
           </table></td>
         </tr>
@@ -20,10 +20,10 @@
          <td align="center" style="padding:0;Margin:0;width:239px">
           <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
             <tr>
-             <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px"><strong>{{item_name}}</strong></p></td>
+             <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px"><strong>{{ItemName}}</strong></p></td>
             </tr>
             <tr>
-             <td align="left" style="padding:0;Margin:0;padding-top:5px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{item_details}}</p></td>
+             <td align="left" style="padding:0;Margin:0;padding-top:5px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{ItemDetails}}</p></td>
             </tr>
           </table></td>
         </tr>
@@ -35,7 +35,7 @@
          <td align="left" style="padding:0;Margin:0;width:46px">
           <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
             <tr>
-             <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{unit_price}}</p></td>
+             <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{UnitPrice}}</p></td>
             </tr>
           </table></td>
         </tr>
@@ -47,7 +47,7 @@
          <td align="left" style="padding:0;Margin:0;width:46px">
           <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
             <tr>
-             <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">x {{quantity}}</p></td>
+             <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">x {{ItemQuantity}}</p></td>
             </tr>
           </table></td>
         </tr>
@@ -59,7 +59,7 @@
          <td align="left" style="padding:0;Margin:0;width:76px">
           <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
             <tr>
-             <td align="right" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{total}}</p></td>
+             <td align="right" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{ItemTotal}}</p></td>
             </tr>
           </table></td>
         </tr>
