--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/delivery_status.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/delivery_status.html
@@ -89,7 +89,7 @@ a[x-apple-data-detectors],
                   <td valign="top" align="center" class="es-m-p0r" style="padding:0;Margin:0;width:560px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;font-size:0px"><img src="https://frhjfai.stripocdn.email/content/guids/CABINET_887f48b6a2f22ad4fb67bc2a58c0956b/images/93351617889024778.png" alt="Logo" width="200" title="Logo" style="display:block;font-size:12px;border:0;outline:none;text-decoration:none"></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;font-size:0px"><img src="{{LogoUrl}}" alt="Logo" width="200" title="Logo" style="display:block;font-size:12px;border:0;outline:none;text-decoration:none"></td>
                      </tr>
                    </table></td>
                  </tr>
