--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/delivery_status.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/delivery_status.html
@@ -6,7 +6,7 @@
   <meta name="x-apple-disable-message-reformatting">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="telephone=no" name="format-detection">
-  <title>Logistics Email</title><!--[if (mso 16)]>
+  <title></title><!--[if (mso 16)]>
     <style type="text/css">
     a {text-decoration: none;}
     </style>
@@ -132,7 +132,7 @@ a[x-apple-data-detectors],
                   <td align="center" valign="top" style="padding:0;Margin:0;width:560px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" style="padding:0;Margin:0"><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">親愛的 {{CustomerName}} 先生/小姐，</h5><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">您在 {{GroupBuyName}} 的</h5><h2 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px !important;color:#333333">訂單 <a target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px;line-height:52px !important" href="">#{{OrderNumber}}</a> 狀態為 {{ShippingStatus}}</h2></td>
+                      <td align="center" style="padding:0;Margin:0"><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">親愛的 {{CustomerName}} 先生/小姐，</h5><h5 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px !important;color:#333333">您在 {{GroupBuyName}} 的</h5><h2 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px !important;color:#333333">訂單 <a target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px;line-height:52px !important" href="{{OrderUrl}}">#{{OrderNumber}}</a> 狀態為 {{ShippingStatus}}</h2></td>
                      </tr>
                      <tr>
                       <td align="center" style="padding:0;Margin:0;padding-top:20px;padding-bottom:20px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">訂購日期 &nbsp;{{OrderDate}}</p></td>
