--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/split_order.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/split_order.html
@@ -6,7 +6,7 @@
   <meta name="x-apple-disable-message-reformatting">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="telephone=no" name="format-detection">
-  <title>split order</title><!--[if (mso 16)]>
+  <title></title><!--[if (mso 16)]>
     <style type="text/css">
     a {text-decoration: none;}
     </style>
@@ -93,7 +93,7 @@ a[x-apple-data-detectors],
                   <td align="center" valign="top" style="padding:0;Margin:0;width:560px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" class="es-infoblock" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:18px;letter-spacing:0;color:#CCCCCC;font-size:12px"><a target="_blank" href="" style="mso-line-height-rule:exactly;text-decoration:underline;color:#CCCCCC;font-size:12px">View online version</a></p></td>
+                      <td align="center" class="es-infoblock" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:18px;letter-spacing:0;color:#CCCCCC;font-size:12px"><a target="_blank" href="" style="mso-line-height-rule:exactly;text-decoration:underline;color:#CCCCCC;font-size:12px"></a></p></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -113,7 +113,7 @@ a[x-apple-data-detectors],
                   <td valign="top" align="center" class="es-m-p0r" style="padding:0;Margin:0;width:560px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:20px;font-size:0px"><img src="https://fkcjtyt.stripocdn.email/content/guids/CABINET_887f48b6a2f22ad4fb67bc2a58c0956b/images/93351617889024778.png" alt="Logo" width="200" title="Logo" style="display:block;font-size:12px;border:0;outline:none;text-decoration:none"></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:20px;font-size:0px"><img src="{{LogoUrl}}" alt="Logo" width="200" title="Logo" style="display:block;font-size:12px;border:0;outline:none;text-decoration:none"></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -139,7 +139,7 @@ a[x-apple-data-detectors],
                       <td align="center" style="padding:0;Margin:0;padding-top:20px;padding-bottom:5px"><h1 class="es-m-txt-c" style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:46px;font-style:normal;font-weight:bold;line-height:55.2px;color:#333333">訂單已拆分</h1></td>
                      </tr>
                      <tr>
-                      <td align="center" class="es-text-7503" style="padding:0;Margin:0;padding-bottom:5px;padding-top:5px"><h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px;color:#333333"><br></h5><h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">親愛的 [Customer Name] 先生/小姐，</h5><h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">您在 [Group Buy Name] 的訂單已成功拆分為個兩個新訂單</h5><h2 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:57.2px;color:#333333">原始訂單&nbsp;<a href="https://my.stripo.email/resources/account/" target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px;line-height:57.2px">#[Order Information]</a></h2><h2 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px;color:#333333">新訂單&nbsp;<a href="https://my.stripo.email/resources/account/" target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px">#[Order Information]</a></h2><h2 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px;color:#333333">新訂單 <a href="https://my.stripo.email/resources/account/" target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px">#[Order Information]</a></h2></td>
+                      <td align="center" class="es-text-7503" style="padding:0;Margin:0;padding-bottom:5px;padding-top:5px"><h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:40px;color:#333333"><br></h5><h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">親愛的 {{CustomerName}} 先生/小姐，</h5><h5 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:44px;color:#333333">您在 {{GroupBuyName}} 的訂單已成功拆分為個兩個新訂單</h5><h2 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:57.2px;color:#333333">原始訂單&nbsp;<a href="{{OrderToSplitUrl}}" target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px;line-height:57.2px">#{{OrderToSplit}}</a></h2><h2 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px;color:#333333">新訂單&nbsp;<a href="{{SplitOrder1Url}}" target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px">#{{SplitOrder1}}</a></h2><h2 style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:26px;font-style:normal;font-weight:bold;line-height:52px;color:#333333">新訂單 <a href="{{SplitOrder2Url}}" target="_blank" style="mso-line-height-rule:exactly;text-decoration:underline;color:#23856d;font-size:26px">#{{SplitOrder2}}</a></h2></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -154,7 +154,7 @@ a[x-apple-data-detectors],
                      <tr>
                      </tr>
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;padding-top:15px"><span class="es-button-border" style="border-style:solid;border-color:#23856d;background:#23856d;border-width:2px;display:inline-block;border-radius:5px;width:auto"><a href="" target="_blank" class="es-button es-button-1621620532140" style="mso-style-priority:100 !important;text-decoration:none !important;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;padding:10px 30px;display:inline-block;background:#23856d;border-radius:5px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center;letter-spacing:0;mso-padding-alt:0;mso-border-alt:10px solid #23856d">前往商店</a></span></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;padding-top:15px"><span class="es-button-border" style="border-style:solid;border-color:#23856d;background:#23856d;border-width:2px;display:inline-block;border-radius:5px;width:auto"><a href="{{GroupBuyUrl}}" target="_blank" class="es-button es-button-1621620532140" style="mso-style-priority:100 !important;text-decoration:none !important;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;padding:10px 30px;display:inline-block;background:#23856d;border-radius:5px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center;letter-spacing:0;mso-padding-alt:0;mso-border-alt:10px solid #23856d">前往商店</a></span></td>
                      </tr>
                      <tr>
                       <td align="center" style="padding:20px;Margin:0;font-size:0">
@@ -182,7 +182,7 @@ a[x-apple-data-detectors],
                   <td align="left" class="es-m-p20b" style="padding:0;Margin:0;width:270px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">顧客姓名：Tanya</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">電子郵件：tanya@kooco.com.tw</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">電話：0900123123</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">付款方式：Credit Card</p></td>
+                      <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">顧客姓名：{{CustomerName}}</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">電子郵件：{{CustomerEmail}}</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">電話：{{CustomerPhone}}</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">付款方式：{{PaymentMethod}}</p></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -192,7 +192,7 @@ a[x-apple-data-detectors],
                   <td align="left" style="padding:0;Margin:0;width:270px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">收件人姓名：Tanya</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">收件人電話：0900123123</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">收件者地址：台中市市政路402號</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">寄送方式：Post Office</p></td>
+                      <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">收件人姓名：{{RecipientName}}</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">收件人電話：{{RecipientPhone}}</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">收件者地址：{{RecipientAddress}}</p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:28px;letter-spacing:0;color:#333333;font-size:14px">寄送方式：{{ShippingMethod}}</p></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -205,7 +205,7 @@ a[x-apple-data-detectors],
                   <td align="left" style="padding:0;Margin:0;width:560px">
                    <table cellspacing="0" width="100%" role="presentation" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px"><br></p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">訂單備註：</p></td>
+                      <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px"><br></p><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">訂單備註：{{RecipientComments}}</p></td>
                      </tr>
                      <tr>
                       <td align="center" style="padding:20px;Margin:0;font-size:0">
@@ -248,16 +248,16 @@ a[x-apple-data-detectors],
                      <tr>
                       <td align="center" style="padding:0;Margin:0;padding-top:15px;padding-bottom:15px;font-size:0">
                        <table cellpadding="0" cellspacing="0" class="es-table-not-adapt es-social" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                         <tr>
-                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><img title="Facebook" src="https://fkcjtyt.stripocdn.email/content/assets/img/social-icons/logo-black/facebook-logo-black.png" alt="Fb" width="32" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
-                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><img src="https://fkcjtyt.stripocdn.email/content/assets/img/social-icons/logo-black/instagram-logo-black.png" alt="Inst" width="32" title="Instagram" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
-                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><img width="32" title="Line" src="https://fkcjtyt.stripocdn.email/content/assets/img/messenger-icons/logo-black/line-logo-black.png" alt="Line" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
-                         </tr>
+                        <tr>
+                            <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><a href="{{FacebookUrl}}" target="_blank"><img title="Facebook" src="https://frhjfai.stripocdn.email/content/assets/img/social-icons/logo-black/facebook-logo-black.png" alt="Fb" width="32" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none" /></a></td>
+                            <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><a href="{{InstagramUrl}}" target="_blank"><img title="Instagram" src="https://frhjfai.stripocdn.email/content/assets/img/social-icons/logo-black/instagram-logo-black.png" alt="Inst" width="32" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none" /></a></td>
+                            <td align="center" valign="top" style="padding:0;Margin:0"><a href="{{LineUrl}}" target="_blank"><img alt="Line" width="32" title="Line" src="https://frhjfai.stripocdn.email/content/assets/img/messenger-icons/logo-black/line-logo-black.png" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none" /></a></td>
+                        </tr>
                        </table></td>
                      </tr>
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:35px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:18px;letter-spacing:0;color:#333333;font-size:12px">Copyright © 2024 [tenant]. All rights reserved.</p></td>
-                     </tr>
+                      <td align="center" style="padding:0;Margin:0;padding-top:15px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:24px !important;letter-spacing:0;color:#333333;font-size:12px">Copyright © {{CurrentYear}} {{CompanyName}}. All rights reserved.</p></td>
+                    </tr>
                    </table></td>
                  </tr>
                </table></td>
