--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/delivery_status.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/delivery_status.html
@@ -157,7 +157,7 @@ a[x-apple-data-detectors],
                  </tr>
                </table></td>
              </tr>
-             <tr>
+             <tr style="display: {{TrackingUrlDisplay}}">
               <td align="left" data-custom-paddings="true" style="padding:0;Margin:0;padding-right:20px;padding-left:20px">
                <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                  <tr>
