--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_shopping_cart_items.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_shopping_cart_items.html
@@ -1,69 +1,60 @@
 ﻿<tr>
- <td align="left" class="esdev-adapt-off" style="Margin:0;padding-right:30px;padding-left:30px">
-  <table cellpadding="0" cellspacing="0" class="esdev-mso-table" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:540px">
-    <tr>
-     <!-- <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0">
-      <table align="left" cellpadding="0" cellspacing="0" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-        <tr>
-         <td align="center" class="es-m-p0r" style="padding:0;Margin:0;width:53px">
-          <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+    <td align="left" class="esdev-adapt-off" style="Margin:0;padding-right:30px;padding-left:30px">
+        <table cellpadding="0" cellspacing="0" class="esdev-mso-table" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;width:540px">
             <tr>
-             <td align="center" style="padding:0;Margin:0;font-size:0px"><img src="{{ImageUrl}}" alt="" width="53" class="adapt-img" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
+                <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
+                    <table align="left" cellpadding="0" cellspacing="0" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                        <tr>
+                            <td align="center" style="padding:0;Margin:0;width:239px">
+                                <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                                    <tr>
+                                        <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px"><strong>{{ItemName}}</strong></p></td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
+                    <table cellpadding="0" cellspacing="0" align="left" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                        <tr>
+                            <td align="left" style="padding:0;Margin:0;width:46px">
+                                <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                                    <tr>
+                                        <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{UnitPrice}}</p></td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
+                    <table cellspacing="0" align="left" cellpadding="0" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                        <tr>
+                            <td align="left" style="padding:0;Margin:0;width:46px">
+                                <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                                    <tr>
+                                        <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">x {{ItemQuantity}}</p></td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
+                    <table cellpadding="0" cellspacing="0" align="right" class="es-right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
+                        <tr>
+                            <td align="left" style="padding:0;Margin:0;width:76px">
+                                <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
+                                    <tr>
+                                        <td align="right" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{ItemTotal}}</p></td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
-          </table></td>
-        </tr>
-      </table></td> -->
-     <!-- <td class="es-m-w0" style="padding:0;Margin:0;width:20px"></td> -->
-     <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
-      <table align="left" cellpadding="0" cellspacing="0" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-        <tr>
-         <td align="center" style="padding:0;Margin:0;width:239px">
-          <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-            <tr>
-             <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px"><strong>{{ItemName}}</strong></p></td>
-            </tr>
-            <!-- <tr>
-             <td align="left" style="padding:0;Margin:0;padding-top:5px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{ItemDetails}}</p></td>
-            </tr> -->
-          </table></td>
-        </tr>
-      </table></td>
-     <!-- <td class="es-m-w0" style="padding:0;Margin:0;width:20px"></td> -->
-     <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
-      <table cellpadding="0" cellspacing="0" align="left" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-        <tr>
-         <td align="left" style="padding:0;Margin:0;width:46px">
-          <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-            <tr>
-             <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{UnitPrice}}</p></td>
-            </tr>
-          </table></td>
-        </tr>
-      </table></td>
-     <!-- <td class="es-m-w0" style="padding:0;Margin:0;width:20px"></td> -->
-     <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
-      <table cellspacing="0" align="left" cellpadding="0" class="es-left" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-        <tr>
-         <td align="left" style="padding:0;Margin:0;width:46px">
-          <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-            <tr>
-             <td align="center" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">x {{ItemQuantity}}</p></td>
-            </tr>
-          </table></td>
-        </tr>
-      </table></td>
-     <!-- <td class="es-m-w0" style="padding:0;Margin:0;width:20px"></td> -->
-     <td valign="top" class="esdev-mso-td" style="padding:0;Margin:0;border-bottom:1px solid #e1e1e1; padding: 3px;">
-      <table cellpadding="0" cellspacing="0" align="right" class="es-right" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-        <tr>
-         <td align="left" style="padding:0;Margin:0;width:76px">
-          <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-            <tr>
-             <td align="right" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#333333;font-size:14px">{{ItemTotal}}</p></td>
-            </tr>
-          </table></td>
-        </tr>
-      </table></td>
-    </tr>
-  </table></td>
+        </table>
+    </td>
 </tr>
