#PK-1570 EDM template modification

--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_addon_product.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_addon_product.html
@@ -1,4 +1,5 @@
 
-<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💸 折扣: {{Discount}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🛍️ 優惠商品: {{ProductName}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💸 加購金額: ${{AddOnProductAmount}}</p>
 <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💵 最低消費金額: ${{Threshold}}</p>
-<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">📦 每筆訂單限用次數: {{LimitPerOrder}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">📦 每筆訂單可加購數量: {{LimitPerOrder}}</p>
