--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_discount.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_discount.html
@@ -1,5 +1,6 @@
 
 <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💸 折扣: {{Discount}}</p>
-<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🔖 您的代碼: {{DiscountCode}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🔖 折扣碼: {{DiscountCode_OR_無需折扣碼}}</p>
 <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💵 最低消費金額: ${{MinimumSpendAmount}}</p>
 <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">👤 每人最高使用次數: {{MaximumUsePerPerson}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🛒 適用商品: {{ApplicableProductName_OR_所有商品}}</p>
