--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_shopping_credit.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_shopping_credit.html
@@ -1,3 +1,4 @@
 
-<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💸 折扣: {{Discount}}</p>
-<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🕒 使用期限: {{ValidForDays}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">💸 回饋金: 高達 ${{CapCashbackAmount}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🕒 使用期限: {{獲取後ValidForDays天內使用_OR_不限時間}}</p>
+<p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🛒 適用商品: {{ApplicableProductName_OR_所有商品}}</p>
